<resources>
    <string name="app_name">USC FIT</string>
    <string name="stepCounter">Steos</string>
    <string name="steps">Steps: </string>
    <string name="distance">Distance: </string>
    <string name="IntialStepCount">0</string>
    <string name="IntialDistanceCount">0 m</string>
    <string name="guestUser">Log In</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="activityTitle">*Activity</string>
    <string name="exerciseTitle">*Exercise</string>
    <string name="totalCalories">Progress / Daily Goal</string>

    <string name="totalCaloriesValue">1000/300 Calories</string>
    <string name="title_activity_add_exercise">Add Activity</string>

    <string name="title_home">Home</string>
    <string name="title_homepage">Today\'s Progress</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_exercise">Choose an Exercise</string>
    <string name="app_title">USC Fit</string>
    <string name="title_weekly_plan">Weekly Plan</string>
    <string-array name="exercise_list">
        <item>Walking</item>
        <item>Running</item>
        <item>Swimming</item>
        <item>Weight-lifting</item>
        <item>Bicycling</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="_0">0</string>
    <string name="action_time">Action Time</string>
    <string name="ActionTimeDefault">0h0m</string>
    <string name="calories">Calories</string>
    <string name="capcalories">CALORIES</string>
    <string name="textview">textview</string>

    spinner for gender
    <string name="genderPrompt">Gender</string>
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="AgePrompt">Age</string>
    <string-array name="age">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
    </string-array>

    <string name="heightPrompt">Height</string>
    <string-array name="height">
        <item>150</item>
        <item>155</item>
        <item>160</item>
        <item>165</item>
        <item>170</item>
        <item>175</item>
        <item>180</item>
        <item>185</item>
        <item>190</item>
        <item>195</item>
        <item>200</item>
        <item>205</item>
        <item>210</item>
        <item>215</item>
        <item>220</item>
    </string-array>

    <string name="workoutGoalPrompt">Height</string>
    <string-array name="workoutGoals">
        <item>Losing fat</item>
        <item>Building muscle</item>
    </string-array>

    <string name="weightPrompt">Weight</string>
    <string-array name="weight">
        <item>30</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
        <item>46</item>
        <item>48</item>
        <item>50</item>
        <item>52</item>
        <item>54</item>
        <item>56</item>
        <item>58</item>
        <item>60</item>
        <item>62</item>
        <item>64</item>
        <item>66</item>
        <item>68</item>
        <item>70</item>
        <item>72</item>
        <item>74</item>
        <item>76</item>
        <item>78</item>
        <item>80</item>
        <item>82</item>
        <item>84</item>
        <item>86</item>
        <item>88</item>
        <item>90</item>
        <item>92</item>
        <item>94</item>
        <item>96</item>
        <item>98</item>
        <item>100</item>
        <item>102</item>
        <item>104</item>
        <item>106</item>
        <item>108</item>
        <item>110</item>
    </string-array>
    <string name="google_maps_API_key">AIzaSyAcIICLHNIOJn0vEl8eBzKW9_ZWlCetd4Y</string>
    <string name="title_activity_maps">Map</string>

</resources>

