<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/AddMorePlan"
        android:icon="@drawable/addmore"
        android:title="Plans" />
    <item
        android:id="@+id/Settings"
        android:icon="@drawable/youtube"
        android:title="Settings" />
    <item
        android:id="@+id/Map"
        android:icon="@drawable/map"
        android:title="Map" />
</menu>