...

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/check_button"
                    android:background="@drawable/invite_icon"
                    android:text="" />

                <Button
                    android:id="@+id/check_button"
                    android:layout_width="30dp"
...
